--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -75,14 +75,19 @@
     <!-- File Viewer Modal -->
     <div id="fileModal" class="modal">
         <div class="modal-content">
+            <!-- Modal Header: Fixed at top -->
             <div class="modal-header">
                 <h3 id="fileTitle">File Viewer</h3>
                 <div class="modal-actions">
-                    <a id="downloadBtn" class="modal-download-btn" style="display:none;">⬇️ Download</a>
+                    <a id="downloadBtn" class="modal-download-btn" style="display:none;">
+                        <span>⬇️</span> Download
+                    </a>
                     <button class="modal-close" onclick="closeFileModal()">✕</button>
                 </div>
             </div>
-            <div id="fileViewerContainer">
+
+            <!-- File Preview Container: Fills remaining space -->
+            <div id="fileViewerContainer" class="file-viewer-container">
                 <!-- File content will be loaded here -->
             </div>
         </div>
